--- a/03/index.html
+++ b/03/index.html
@@ -5,5 +5,52 @@
 </head>
 <body>
 
+    <h1>Заголовок 1</h1>
+    <h2>Заголовок 2</h2>
+
+<p>
+Каждый <em>веб-разработчик</em>
+ знает, что такое <strong>текст-«рыба».</strong> Текст этот,<br> несмотря на название, не имеет никакого отношения к
+обитателям<br> водоемов. Используется он веб-дизайнерами для вставки на интернет-<br>страницы и демонстрации внешнего вида
+контента, просмотра шрифтов,<br> абзацев, отступов и т.д. Так как <strong><em>цель</em> применения</strong> такого текста<br> исключительно
+демонстрационная, то и смысловую нагрузку ему нести<br> совсем необязательно. Более того, нечитабельность текста сыграет на<br>
+руку при оценке качества восприятия макета.
+</p>
+
+<p>
+Самым известным «рыбным» текстом является знаменитый Lorem ipsum.<br> Считается, что впервые его применили в книгопечатании
+еще в XVI веке.<br> Своим появлением Lorem ipsum обязан древнеримскому философу<br> Цицерону, ведь именно из его трактата
+«О пределах добра и зла»<br> средневековый книгопечатник вырвал отдельные фразы и слова, получив<br> <strong>текст-«рыбу»,</strong> широко
+используемый и по сей день.<br> Конечно, возникают некоторые вопросы, связанные с использованием<br> Lorem ipsum на сайтах и
+проектах, ориентированных на кириллический<br> контент – написание символов на латыни и на кириллице значительно<br> различается.
+</p>
+
+<p>
+И даже с языками, использующими латинский алфавит, могут<br> возникнуть небольшие проблемы: в различных языках те или иные<br>
+буквы встречаются с разной частотой, имеется разница в длине наиболее<br> распространенных слов. Отсюда напрашивается вывод,
+что все же лучше<br> использовать в качестве «рыбы» текст на том языке, который<br> планируется использовать при запуске
+проекта. Сегодня существует<br> несколько вариантов Lorem ipsum, кроме того, есть специальные<br> генераторы, создающие
+собственные варианты текста на основе<br> оригинального трактата, благодаря чему появляется возможность<br> получить более
+длинный неповторяющийся набор слов.<hr>
+</p>
+
+Покупки:
+<ul>
+    <li>Мороженое</li>
+    <li>Хлеб</li>
+    <li>Ручка</li>
+    <li>Блокнот</li>
+</ul>
+
+
+Мой маршрут на день:<br>
+<ol>
+    <li>Дом</li>
+    <li>Работа</li>
+    <li>Кафе</li>
+    <li>Работа</li>
+    <li>Магазин</li>
+    <li>Дом</li>
+ </ol>   
 </body>
 </html>
